source/sass/commons/variables.scss
$font: "Lato", sans-serif;
$width: 1020px;
$transition: all 0.2s linear;

$accent-color: #f06c64;
$default-color: #000000;
$wrapper-shadow: 0 1px 3px 0 rgba(50, 55, 70, 0.7);

$wrapper-padding: 4rem;

$background-color-header: #2d303a;
$font-color-main: #ffffff;
$header-height: 95px;
$bottom-line: inset 0 -6px 0 0 #323746;

$navigation-list-width: 371px;

$slider-height: 600px;

$slider-control-width: 100px;
$slider-control-height: 600px;

$iphone-border: 3px solid #c6c6c6;
$iphone-width: 195px;
$iphone-height: 339px;

$services-item-color: #767e9e;
$services-background-color: #f2f2f2;
$services-block-height: 500px;
$services-title-color: #666d89;
$services-item-width: 221px;
$services-item-height: 100px;
$services-icon-size: 55px;

$works-item-width: 220px;
$works-item-height: 187px;
$works-gap: 10px;

